--- a/ansible/roles/water-gkhs-flexget/tasks/main.yml
+++ b/ansible/roles/water-gkhs-flexget/tasks/main.yml
@@ -2,7 +2,13 @@
 - include: plex-tasks.yml
   become: yes
   become_user: plex
+  tags:
+    - flexget
+    - media
 
 - cron: name="flexget" minute="16,46"
         user="plex" job="{{ plex_home }}/.virtualenvs/flexget/bin/python {{ plex_home }}/.virtualenvs/flexget/bin/flexget --cron execute"
         cron_file=flexget
+  tags:
+    - flexget
+    - media
