--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -34,6 +34,7 @@
     - { role: archipelago-nginx, tags: nginx }
     - water-gkhs-filebot
     - water-gkhs-flexget
+    - archipelago-inotify
     - b2-backup
   tasks:
     - user: name={{ item }} groups=docker append=yes
