--- a/ansible/roles/water-gkhs-filebot/tasks/main.yml
+++ b/ansible/roles/water-gkhs-filebot/tasks/main.yml
@@ -41,6 +41,7 @@
   template: src=youtube_download.sh dest={{ plex_home }}/bin/youtube_download.sh mode=0755 owner=plex
   tags:
     - media
+    - media_playlists
 
 - name: Add youtube_download cron job
   cron: name="youtube_download" minute="15" hour=3
