--- a/ansible/roles/water-gkhs-packages/tasks/main.yml
+++ b/ansible/roles/water-gkhs-packages/tasks/main.yml
@@ -4,11 +4,11 @@
   timezone:
     name: UTC
 
-- name: Install key
-  apt_key:
-    keyserver: keyserver.ubuntu.com
-    id: 8B48AD6246925553
-  when: ansible_distribution == 'Debian'
+#- name: Install key
+#  apt_key:
+#    keyserver: keyserver.ubuntu.com
+#    id: 8B48AD6246925553
+#  when: ansible_distribution == 'Debian'
 
 - name: Package list update
   apt: update_cache=yes cache_valid_time=21600
@@ -72,9 +72,9 @@
   apt_repository:
     repo: "{{ item }}"
   loop:
-    - "deb http://archive.ubuntu.com/ubuntu/ bionic universe"
-    - "deb http://archive.ubuntu.com/ubuntu/ bionic-updates universe"
-    - "deb http://security.ubuntu.com/ubuntu/ bionic-security universe"
+    - "deb http://archive.ubuntu.com/ubuntu/ {{ ansible_distribution_release }} universe"
+    - "deb http://archive.ubuntu.com/ubuntu/ {{ ansible_distribution_release }}-updates universe"
+    - "deb http://security.ubuntu.com/ubuntu/ {{ ansible_distribution_release }}-security universe"
   tags:
     - certbot
 
