--- a/ansible/roles/water-gkhs-web-errors/templates/config/errors_apache.conf
+++ b/ansible/roles/water-gkhs-web-errors/templates/config/errors_apache.conf
@@ -1,5 +1,6 @@
 Alias /.ErrorDocuments	/var/www/errors
-ErrorDocument 404	/.ErrorDocuments/404.html
+ErrorDocument 404	/.ErrorDocuments/locate.php
+ErrorDocument 410	/.ErrorDocuments/404.html
 ErrorDocument 401	/.ErrorDocuments/401.html
 ErrorDocument 502	/.ErrorDocuments/502.html
-ErrorDocument 503	/.ErrorDocuments/502.html
+ErrorDocument 503	/.ErrorDocuments/50X.html
