Update for new Ansible syntax

--- a/ansible/roles/water-gkhs-nginx/tasks/main.yml
+++ b/ansible/roles/water-gkhs-nginx/tasks/main.yml
@@ -1,5 +1,7 @@
 - name: install nginx
-  apt: pkg=nginx state=installed
+  apt: 
+    pkg: nginx 
+    state: present
 
 - name: configure letsencrypt config for misc
   template: 
