Fix 410 errors on nginx

--- a/ansible/roles/water-gkhs-web-errors/templates/config/errors_nginx.conf
+++ b/ansible/roles/water-gkhs-web-errors/templates/config/errors_nginx.conf
@@ -8,3 +8,21 @@
                 root /var/www/errors/;
                 internal;
         }
+        error_page 410 @gone;
+
+        location @gone {
+                root /var/www/errors/;
+		rewrite ^(.*)$ /410.html break;
+                internal;
+        }
+
+        error_page 401 /401.html;
+        location = /401.html {
+                root /var/www/errors/;
+                internal;
+        }
+        error_page 503 /50X.html;
+        location = /50X.html {
+                root /var/www/errors/;
+                internal;
+        }
