Add exit on failure to mysql backup

--- a/ansible/roles/water-gkhs-mysql-backup/tasks/main.yml
+++ b/ansible/roles/water-gkhs-mysql-backup/tasks/main.yml
@@ -3,6 +3,7 @@
 
 - apt: name=python-mysqldb state=present
 - apt: name=mariadb-server state=present
+- apt: name=chronic state=present
 
 # Set root password
 - mysql_user: name=root password={{mysql_root_password}} check_implicit_admin=yes
