--- a/ansible/roles/water-gkhs-mysql-backup/tasks/main.yml
+++ b/ansible/roles/water-gkhs-mysql-backup/tasks/main.yml
@@ -3,13 +3,53 @@
 
 - apt: name=python-mysqldb state=present
 - apt: name=mariadb-server state=present
-- apt: name=chronic state=present
+- apt: name=moreutils state=present # provides chronic
 
 # Set root password
 - mysql_user: name=root password={{mysql_root_password}} check_implicit_admin=yes
 # Setup backups
 
-- file: path={{ mysql_backup_location }} state=directory mode=0755
+- file: 
+    path: "{{ item }}"
+    state: directory
+    mode: 0755
+  loop:
+    - "{{ mysql_backup_location }}"
+    - "{{ mysql_backup_location }}/Daily"
+    - "{{ mysql_backup_location }}/Monthly"
+
+
+- name: Move Daily backups to new directory
+  command:
+    cmd: "mv /var/backups/mysql/{{ item }} /var/backups/mysql/Daily/{{ item }}"
+    removes: "/var/backups/mysql/{{ item }}"
+  loop:
+     - Monday
+     - Tuesday
+     - Wednesday
+     - Thursday
+     - Friday
+     - Saturday
+     - Sunday
+
+
+- name: Move Monthly backups to new directory
+  command: 
+    cmd: "mv /var/backups/mysql/{{ item }} /var/backups/mysql/Monthly/{{ item }}"
+    removes: "/var/backups/mysql/{{ item }}"
+  loop:
+    - January
+    - February
+    - March
+    - April
+    - May
+    - June
+    - July
+    - August
+    - September
+    - October
+    - November
+    - December
 
 - ini_file: dest=/root/.my.cnf section=client option=user value=root mode=0600 backup=yes
 - ini_file: dest=/root/.my.cnf section=client option=password value={{mysql_root_password}} mode=0600 backup=yes
@@ -17,9 +57,9 @@
 - template: src=mysql_backup.sh dest=/usr/local/bin/mysql_backup.sh mode=0755
 
 - cron: name="mysql_backup_daily" minute="16" hour="3"
-        user="root" job="chronic /usr/local/bin/mysql_backup.sh `date +\%A`"
+        user="root" job="chronic /usr/local/bin/mysql_backup.sh Daily/`date +\%A`"
         cron_file=mysql_backup_daily
 
 - cron: name="mysql_backup_monthly" minute="16" hour="0" day="1"
-        user="root" job="chronic /usr/local/bin/mysql_backup.sh `date +\%B`"
+        user="root" job="chronic /usr/local/bin/mysql_backup.sh Monthly/`date +\%B`"
         cron_file=mysql_backup_monthly
