--- a/ansible/roles/aws-aqcom-dns/tasks/carcosadreams.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/carcosadreams.yml
@@ -302,6 +302,20 @@
   tags:
     - carcosadreams
 
+- name: the-sisyphus.carcosadreams.com. - A
+  route53:
+      overwrite: true
+      command: "create"
+      zone: "carcosadreams.com"
+      record: "the-sisyphus.carcosadreams.com."
+      type: "A"
+      ttl: "300"
+      value: '{{ archipelago_ip }}'
+      aws_access_key: '{{istic_aws_key}}'
+      aws_secret_key: '{{istic_aws_secret}}'
+  tags:
+    - carcosadreams
+
 - name: alba.carcosadreams.com. - A
   route53:
       overwrite: true
