--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -3,7 +3,7 @@
 - src: geerlingguy.java
 - src: elboletaire.transmission
 - src: hannseman.homebridge
-- src: pablocrivella.heroku-toolbelt
+#- src: pablocrivella.heroku-toolbelt
 - src: torian.filebeat
 - src: https://github.com/aquarion/ansible-papertrail
   name: ansible.papertrail
