Fix syntax error

--- a/ansible/roles/water-gkhs-flexget/tasks/plex-tasks.yml
+++ b/ansible/roles/water-gkhs-flexget/tasks/plex-tasks.yml
@@ -1,7 +1,7 @@
 # Tasks performed as plex user
 
 - name: Install pip transmissionrpc package
-- pip: 
+  pip: 
     name: transmissionrpc 
     virtualenv: "{{ plex_home }}/.virtualenvs/flexget"
     virtualenv_python: python3.6
