--- a/ansible/roles/water-gkhs-filebot/tasks/main.yml
+++ b/ansible/roles/water-gkhs-filebot/tasks/main.yml
@@ -44,7 +44,7 @@
 
 - name: Add sortitaaht cron job
   cron: name="filebot" minute="2,32"
-        user="plex" job="{{ plex_home }}/bin/sortitaaht.sh | logger --tag Filebot --server={{ plex_remote_syslog_host }} --port={{ plex_remote_syslog_host }}"
+        user="plex" job="{{ plex_home }}/bin/sortitaaht.sh | logger --tag Filebot --server={{ plex_remote_syslog_host }} --port={{ plex_remote_syslog_port }}"
         cron_file=filebot
         state=present
   tags:
@@ -58,7 +58,7 @@
 
 - name: Add youtube_download cron job
   cron: name="youtube_download" minute="15" hour=3
-        user="plex" job="{{ plex_home }}/bin/youtube_download.sh  | logger --server={{ plex_remote_syslog_host }} --port={{ plex_remote_syslog_host }} --tag youtube"
+        user="plex" job="{{ plex_home }}/bin/youtube_download.sh  | logger --server={{ plex_remote_syslog_host }} --port={{ plex_remote_syslog_port }} --tag youtube"
         cron_file=youtube_download
         state=present
   tags:
@@ -86,7 +86,7 @@
 
 - name: Add remove_completed_torrents cron job
   cron: name="remove_completed_torrents" minute="15" hour=18
-        user="plex" job="{{ plex_home }}/bin/remove_completed_torrents.sh  | logger --server={{ plex_remote_syslog_host }} --port={{ plex_remote_syslog_host }} --tag torrent_remove"
+        user="plex" job="{{ plex_home }}/bin/remove_completed_torrents.sh  | logger --server={{ plex_remote_syslog_host }} --port={{ plex_remote_syslog_port }} --tag torrent_remove"
         cron_file=remove_completed_torrents
         state=present
   tags:
@@ -116,7 +116,7 @@
 
 - name: Add inotify cron job
   cron: name="filebot-notify" special_time=hourly
-        user="plex" job="{{ plex_home }}/bin/inotify.sh | logger --server={{ plex_remote_syslog_host }} --port={{ plex_remote_syslog_host }} --tag inotify"
+        user="plex" job="{{ plex_home }}/bin/inotify.sh | logger --server={{ plex_remote_syslog_host }} --port={{ plex_remote_syslog_port }} --tag inotify"
         cron_file=filebot-notify
   tags:
     - media
