--- a/ansible/roles/water-gkhs-flexget/tasks/media-user-tasks.yml
+++ b/ansible/roles/water-gkhs-flexget/tasks/media-user-tasks.yml
@@ -1,10 +1,12 @@
-# Tasks performed as plex user
+# Tasks performed as media user
 
 - name: Install pip transmissionrpc package
   pip: 
     name: transmissionrpc 
     virtualenv: "{{ plex_home }}/.virtualenvs/flexget"
     virtualenv_python: python3.6
+  tags:
+    - flexget
 
 - name: Install Flexget
   pip: 
@@ -12,7 +14,19 @@
     virtualenv: "{{ plex_home }}/.virtualenvs/flexget"
     virtualenv_python: python3.6
     version: "{{ flexget_version }}"
+  tags:
+    - flexget
 
 - file: path={{ plex_home }}/.flexget state=directory owner=plex
+  tags:
+    - flexget
 
-- template: src=flexget.yml dest={{ plex_home }}/.flexget/config.yml mode=0660 owner=plex 
+#- template: src=flexget.yml dest={{ plex_home }}/.flexget/config.yml mode=0660 owner=plex 
+- name: Create flexget config
+  copy:
+    dest: "{{ plex_home }}/.flexget/config.yml "
+    mode: 0660 
+    owner: "plex"
+    content: "{{ flexget_tasks | to_nice_yaml }}"
+  tags:
+    - flexget
