--- a/ansible/roles/archipelago-nginx/tasks/main.yml
+++ b/ansible/roles/archipelago-nginx/tasks/main.yml
@@ -1,9 +1,22 @@
+- name: Install required packages
+  apt:
+    package: "{{item}}"
+    state: present
+  loop:
+    - "nginx"
+    - "python-passlib"
+    - libnginx-mod-http-fancyindex
+  tags:
+    - streamsite
+
 - name: configure nginx sites as available
   template: src={{item}} dest=/etc/nginx/sites-available/{{ item | basename }}
   with_fileglob:
    - templates/vhosts/*
   notify:
    - restart nginx
+  tags:
+   - streamsite
 
 - name: Configure nginx sites as enabled
   file: path=/etc/nginx/sites-enabled/{{ item | basename }} src=../sites-available/{{ item | basename }} state=link
@@ -11,6 +24,8 @@
    - templates/vhosts/*
   notify:
    - restart nginx
+  tags:
+     - streamsite
 
 - name: Configure dead nginx sites as disabled
   file: path=/etc/nginx/sites-enabled/{{ item | basename }} state=absent
@@ -25,6 +40,16 @@
    - templates/deleted_vhosts/*
   notify:
    - restart nginx
+
+- name: Streamsite Basic Auth
+  htpasswd:
+    path: /etc/nginx/streamsite.htpass
+    name: "{{ item.user }}"
+    password: "{{ item.password }}"
+  loop: "{{  streamsite_users  }}"
+  tags:
+    - streamsite
+
 
 - name: Configure nginx redirects
   template: src=config/redirects.nginx.j2 dest=/etc/nginx/conf.d/www_redirects.conf
