--- a/ansible/roles/aws-aqcom-dns/tasks/aquarionics.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/aquarionics.yml
@@ -397,3 +397,17 @@
       ttl: "300"
       value: '{{ archipelago_ip }}'
 
+
+- name: vis.aquarionics.com. - A
+  route53:
+      overwrite: true
+      command: "create"
+      zone: "aquarionics.com"
+      record: "vis.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
+      type: "A"
+      ttl: "300"
+      value: '{{ archipelago_ip }}'
+  tags:
+      - streamsite
