--- a/ansible/roles/water-gkhs-filebot/tasks/main.yml
+++ b/ansible/roles/water-gkhs-filebot/tasks/main.yml
@@ -106,35 +106,4 @@
 - name: Add media logrotate
   template: src=media_logrotate.j2 dest=/etc/logrotate.d/media_logrotate mode=0644 owner=root
   tags:
-    - inotify
-
-# On Notify
-
-- name: Install inotify-tools
-  apt: package=inotify-tools state=present
-  tags:
-    - media
-    - inotify
-
-# - name: Add Notify script to bin
-#   template: src=inotify.sh dest={{ plex_home }}/bin/inotify.sh mode=0755 owner=plex
-#   notify:
-#     - restart filebot inotify
-#   tags:
-#     - media
-#     - inotify
-
-- name: Add inotify cron job
-  cron: name="filebot-notify" special_time=hourly
-        user="plex" job="{{ plex_home }}/bin/inotify.sh 2>&1 | logger --server={{ plex_remote_syslog_host }} --port={{ plex_remote_syslog_port }} --tag inotify"
-        cron_file=filebot-notify state=absent
-  tags:
-    - media
-    - inotify
-
-
-- name: Remove inotify script
-  file:
-    path: "{{ plex_home }}/bin/inotify.sh"
-    state: absent
-
+    - logrotate
